--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "npm-quickstart",
-  "version": "0.1.1",
+  "version": "0.1.3",
+  "description": "A CLI tool to generate templates for npm package development.",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "dev": "nodemon index.js"
   },
   "bin": {
     "quickstart": "./index.js"
   },
-  "type": "module",
   "keywords": [
     "cli",
     "js",
@@ -19,9 +20,16 @@
     "blank",
     "npm-quickstart"
   ],
-  "author": "Danial(Itzhep)",
+  "author": "Danial (Itzhep)",
   "license": "MIT",
-  "description": "a cli tool to generate templates for npm package development . ",
+  "homepage": "https://github.com/Itzhep/npm-quickstart#readme",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Itzhep/npm-quickstart.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Itzhep/npm-quickstart/issues"
+  },
   "dependencies": {
     "chalk": "^5.3.0",
     "inquirer": "^9.1.4",
@@ -30,4 +38,5 @@
   "devDependencies": {
     "nodemon": "^3.1.4"
   }
+
 }
